# Rest_Defence_Analysis

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  report_generator.py  requirements.txt
src/: data_loading.py  helpers.py  logos.py  pdf_report.py  rest_defence_area.py  transition_detection.py  video.py  visualisation.py
src/metrics/: prevention.py  transition.py
src/visualizations/: __init__.py  line_plots.py  pitch_block_plot.py  pizza_plots.py  ratings_bar.py  scatterplots.py  spe_bar.py  spider_plots.py  structural_table.py
