[project]
name = "transition-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.26.136",
    "cachetools==5.3.0",
    "colormath==3.0.0",
    "connectorx>=0.2.3,<=0.3.1",
    "cryptography==40.0.2",
    "cython==0.29.34",
    "django==4.2.1",
    "django-cors-headers==4.0.0",
    "djangorestframework==3.14.0",
    "dtaidistance<2.2",
    "gunicorn==20.1.0",
    "imgkit==1.2.3",
    "ipykernel>=7.2.0",
    "jenkspy==0.4.1",
    "jupyter>=1.1.1",
    "levenshtein==0.21.1",
    "matplotlib==3.7.1",
    "mplsoccer==1.1.12",
    "mysql-connector-python==8.0.33",
    "mysqlclient==2.1.1",
    "natsort==8.3.1",
    "networkx==3.1",
    "numpy==1.24.3",
    "opencv-contrib-python-headless==4.7.0.72",
    "openpyxl==3.1.2",
    "pandas<2.0",
    "pandera==0.9.0",
    "pillow==9.5.0",
    "polars>=0.20.0",
    "psutil==5.9.5",
    "pyjarowinkler==1.8",
    "pymysql==1.0.3",
    "redis==4.5.5",
    "requests==2.30.0",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "seaborn==0.12.2",
    "setuptools-scm==7.1.0",
    "sqlalchemy>=1.4,<2.0",
    "tqdm==4.65.0",
    "utm==0.7.0",
    "xgboost==1.7.6",
    "xlrd==2.0.1",
    "xlsxwriter==3.1.0",
]
